
Release 5.0.10 (unreleased)
===========================

Bug fixes
---------

- CFDSTUDY (Salome): fix issues with dissapearing windows onserved on
  some actual systems such as Debian 9 and Ubuntu 16.04.

- Lagrangian Module:
  * Fix crash in some cases with no deposition model.
  * Fix errors in deposition/reentrainment model.

- Fix missing free surface boundary movement in some cases depending on
  which pages were visited in the GUI (GitHub issue #27).

- Compressible: fix density time scheme in transported passive scalar/vector
  balance to ensure conservativity with compressible algorithm.

- Avoid error preventing run when checking remaining time using SLURM job array.

- Fixes for parallel runs in sedimentation source term with humid atmosphere
  model.

- Fix allocation of pmappers to scalar fields in atmospheric aerosols model. 

- Fix allocation size for values at injection in case of mass source terms
  with coupled Reynolds stress solver.

- GUI: fix missing update of modified scalar names for groundwater flows.

- GUI: fix loss of previous deactivated wall function setting when reopened.

- trackcvg: allow saving state only when data is loaded and loading it when
  saved state is present.

- CFDStudy: allow loading studies with no MESH or POST subdirectories.

- Fix improved hydrostatic treatment and PISO-like iterations
  (nterup > 1 and iphydr = 1).

- GUI: fix crash on startup on some recent systems.

Release 5.0.9 (Sep 26 2018)
===========================

Bug fixes
---------

- Fixes to atmospheric chemistry model.

- Lagrangian module: fix resuspension when having internal deposition.

- Compressible model: fix inverted arguments for user velocity source terms.

- Radiative model: fix GUI-defined BC selection between reflecting wall and
  prescribed flux BC for grey/black wall.

- GUI: fix various crashes with th PyQt API 2(mostly on systems using PyQt5,
  as these default to the concerned API).
